<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <!-- As our statusBar is transparent below and content is moved behind our toolbar has to include the padding on top so we use this area -->
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_hakkimizda"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:contentInsetStartWithNavigation="16dp"

                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >


            <android.support.v7.widget.CardView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >

                    <ImageView
                            android:id="@+id/image"
                            android:layout_marginTop="25dp"
                            android:layout_width="match_parent"
                            android:layout_height="85dp"


                            android:src="@drawable/icon_malzemeiste"
                            />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"

                            android:textSize="16sp"

                            android:text="@string/paragraph_1"
                            android:layout_height="wrap_content"/>


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:textSize="16sp"
                            android:text="@string/paragraph_2"
                            android:layout_height="wrap_content"/>


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:textSize="16sp"
                            android:text="@string/paragraph_3"
                            android:layout_height="wrap_content"/>


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:textSize="16sp"
                            android:text="@string/paragraph_4"
                            android:layout_height="wrap_content"/>


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:textSize="16sp"
                            android:text="@string/paragraph_5"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>